# ApexifyHUD

./: .gitignore  CMakeLists.txt  main.cpp  pch.h
Model/: IrsdkDataProvider.cpp  IrsdkDataProvider.h
Model/IbtLogSimulator/: IbtLogSimulator.cpp  IbtLogSimulator.h
ViewModels/: MainWindowVM.cpp  MainWindowVM.h
ViewModels/Essentials/: EssentialsVM.cpp  EssentialsVM.h
ViewModels/Telemetry/: TelemetryChartVM.cpp  TelemetryChartVM.h
Views/: MainWindow.qml
Views/Controls/: ColorPickerPopup.qml  CustomCheckBox.qml  CustomRadioButton.qml  SettingsCheckBox.qml  SnapDragArea.qml
Views/Essentials/: EssentialsWindow.qml
Views/Telemetry/: CustomChartControl.cpp  CustomChartControl.h  TelemetryChart.qml  TelemetryPedalInput.qml  TelemetrySettingsPopup.qml  TelemetryWindow.qml
header/: FastTelemetryChart.h  IbtSimulator.h  MainWindowBackend.h  Telemetry.h  TelemetryChartData.h  WinClickThrough.h
qml/: Main.qml  MainWindow.qml  TelemetryChart.qml  TelemetryWindow.qml  main.qml
res/: apexify_hud.qrc  qml.qrc
resources/: resources.qrc
src/: FastTelemetryChart.cpp  IbtSimulator.cpp  MainWindowBackend.cpp  Telemetry.cpp  TelemetryChartData.cpp  WinClickThrough.cpp  main.cpp
